<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Video Game Price Charts</string>
    <string name="search_header">Search by Title or UPC</string>
    <string name="search_label">Go</string>
    <string name="nintendo_header">Browse by Console: Nintendo</string>
    <string name="sega_header">Browse by Console: Sega</string>
    <string name="playstation_header">Browse by Console: Sony</string>
    <string name="atari_header">Browse by Console: Atari</string>
    <string name="other_header">Browse by Console: Other</string>
    <string name="used_price_header">Loose Price:</string>
    <string name="new_price_header">New Price:</string>
    <string name="last_observation_header">Last Observation: </string>
    <string name="volume_header">Volume: </string>
    <string name="used_prices_header">Used Prices</string>
    <string name="view_graph_label"><u>View Price History Chart</u></string>
    <string-array name="sort_by">
    	<item>Alphabetical</item>
    	<item>Most Popular</item>
    	<item>Loose Price</item>
    	<item>New Price</item>
    </string-array>
    <string-array name="sort_by_type">
    	<item>name</item>
    	<item>popular</item>
    	<item>highest-price</item>
    	<item>new-highest-price</item>
    </string-array>
    <string name="price_chart_activity_label">Price History Chart</string>
    <string name="full_game_activity_label">New &amp; Used Price Comparison</string>
    <string name="vgpc_activity_label">Compare Prices On 26,600 Video Games, See Historic Prices For Every Game, Find Stores With The Lowest Prices</string>
    <string name="pending_label">Now Loading...</string>
    <string name="complete_price_header">Complete Price:</string>
    <string name="xbox_header">Browse by Console: Xbox</string>
</resources>
