<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent" android:fillViewport="true">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/background">
	    
	    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/body">
			<ImageView android:src="@drawable/logo" 
				android:layout_height="wrap_content" 
				android:layout_centerVertical="true"
				android:layout_margin="5dip" 
				android:layout_width="wrap_content" 
				android:layout_centerHorizontal="true"></ImageView>
		</RelativeLayout>
			
		<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/border" />
			
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/border" android:layout_margin="5dip">
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/body" android:layout_margin="2dip">
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip">
					<ImageView android:src="@drawable/bullet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_marginRight="5dip"></ImageView>
					<TextView android:layout_height="wrap_content" android:text="@string/search_header" android:textColor="@drawable/text" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/splash" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"/>
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip" android:layout_marginTop="5dip">
					<ImageButton android:id="@+id/barcode_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/barcode" android:layout_gravity="center_vertical"></ImageButton>
					<EditText android:layout_height="wrap_content" android:id="@+id/search_text" android:layout_weight="1" android:layout_width="wrap_content" android:layout_gravity="center_vertical" android:singleLine="true"></EditText>
					<Button android:id="@+id/search_button" android:text="@string/search_label" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_vertical"></Button>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/border" android:layout_margin="5dip">
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/body" android:layout_margin="2dip" >
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip">
					<ImageView android:src="@drawable/bullet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_marginRight="5dip"></ImageView>
					<TextView android:layout_height="wrap_content" android:text="@string/nintendo_header" android:textColor="@drawable/text" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/splash" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"/>
				<TableLayout android:id="@+id/nintendo_table" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"></TableLayout>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/border" android:layout_margin="5dip">
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/body" android:layout_margin="2dip" >
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip">
					<ImageView android:src="@drawable/bullet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_marginRight="5dip"></ImageView>
					<TextView android:layout_height="wrap_content" android:text="@string/sega_header" android:textColor="@drawable/text" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/splash" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"/>
				<TableLayout android:id="@+id/sega_table" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"></TableLayout>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/border" android:layout_margin="5dip">
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/body" android:layout_margin="2dip" >
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip">
					<ImageView android:src="@drawable/bullet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_marginRight="5dip"></ImageView>
					<TextView android:layout_height="wrap_content" android:text="@string/atari_header" android:textColor="@drawable/text" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/splash" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"/>
				<TableLayout android:id="@+id/atari_table" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"></TableLayout>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/border" android:layout_margin="5dip">
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/body" android:layout_margin="2dip" >
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip">
					<ImageView android:src="@drawable/bullet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_marginRight="5dip"></ImageView>
					<TextView android:layout_height="wrap_content" android:text="@string/playstation_header" android:textColor="@drawable/text" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/splash" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"/>
				<TableLayout android:id="@+id/playstation_table" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"></TableLayout>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/border" android:layout_margin="5dip">
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/body" android:layout_margin="2dip" >
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip">
					<ImageView android:src="@drawable/bullet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_marginRight="5dip"></ImageView>
					<TextView android:layout_height="wrap_content" android:text="@string/other_header" android:textColor="@drawable/text" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<View android:layout_width="fill_parent" android:layout_height="4dip" android:background="@drawable/splash" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"/>
				<TableLayout android:id="@+id/other_table" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_marginRight="3dip"></TableLayout>
			</LinearLayout>
		</LinearLayout>
			
	</LinearLayout>
</ScrollView>
